fix(background): remove waves when overflow deeper than the footer

--- a/src/app/styles/components/background/waves.scss
+++ b/src/app/styles/components/background/waves.scss
@@ -234,3 +234,9 @@
     }
   }
 }
+
+@media (min-width: 2310px) {
+  .background-elements :is(.wave-group-4, .wave-group-5) {
+    display: none;
+  }
+}
